[package]
name = "filecoin-api"
version = "0.1.0"
authors = ["YST-GG <1964937517@qq.com>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["rlib"]
name = "filecoin_api"
path = "src/lib.rs"
edition = "2018"

[[bin]]
name = "filecoin-api"
path = "src/main.rs"

[dependencies]
actix-rt = "*"
actix-web = "^2"
actix-multipart = "*"
futures = "^0.3"
futures-core = "*"
futures-util = "*"
log = "*"
fil_logger = "0.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
mime = "*"
lazy_static = "^1.4"
libc = "*"
bytes = "*"

[dependencies.filecoin-proofs-api]
package = "filecoin-proofs-api"
version = "4.0.0"
